Fixed H2 titles alignment on home page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -69,7 +69,7 @@ body {
 
   padding-top: 25px;
   padding-right: 35px;
-  padding-bottom: 40px;
+  padding-bottom: 55px;
   padding-left: 35px;
 
   background-color: $grey-bg;
@@ -141,10 +141,15 @@ aside {
 
   .aside-wrapper {
     width: 100%;
+
+    padding-bottom: 15px;
   }
 
   h2 {
-    @include fontFamilyRoboto(23px);
+    @include fontFamilyRoboto(24px);
+
+    margin-top: 45px;
+    margin-bottom: 10px;
 
     font-weight: bold;
   }
@@ -234,10 +239,13 @@ aside {
   background-color: $grey-bg;
 
   h2 {
-    @include fontFamilyRoboto(23px);
+    @include fontFamilyRoboto(24px);
+
     margin-left: 20px;
     margin-top: 50px;
-    margin-bottom: 0;
+    margin-bottom: 23px;
+
+    font-weight: bold;
   }
 
   .wrapper-cards {
